@@ -277,6 +277,7 @@ object CelebornCommonSettings {
       "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
       "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
       "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+      "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED",
       "-Dio.netty.tryReflectionSetAccessible=true"
     ),
 
